force-app/main/default/objects/Registration__c/fields/Event_Contact_Interest_Topics__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Interest_Topics__c</fullName>
    <inlineHelpText
  >Contact Interest Topics from the Event at the time of registration.</inlineHelpText>
    <label>Event Contact Interest Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Interest_Topics</valueSetName>
    </valueSet>
</CustomField>