force-app/main/default/objects/Registration__c/fields/Event_Contract__c.field-meta.xml
<CustomField>
    <fullName>Event_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>