force-app/main/default/objects/Registration__c/fields/Event_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Event_ID_Formula__c</fullName>
    <formula>Event__r.Event_Id_Case_Safe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event ID (Formula)</label>
    <type>Text</type>
</CustomField>