force-app/main/default/objects/Registration__c/fields/Event_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Event_Name_Formula__c</fullName>
    <formula>Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Name (Formula)</label>
    <type>Text</type>
</CustomField>