force-app/main/default/objects/Registration__c/fields/Event_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Event_No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registrant did not show up at this event.</description>
    <label>No Show / Cancellation</label>
    <type>Checkbox</type>
</CustomField>