force-app/main/default/objects/Registration__c/fields/Event_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_Type__c</fullName>
    <formula>Event__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Record Type</label>
    <type>Text</type>
</CustomField>