force-app/main/default/objects/Registration__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <description
  >Created for Ticket #81193 to allow sorting on related record component on Privacy Request records.</description>
    <formula>Event__r.Event_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>