force-app/main/default/objects/Registration__c/fields/Event_Venue_State__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue_State__c</fullName>
    <formula>Event__r.Venue_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Venue State</label>
    <type>Text</type>
</CustomField>