force-app/main/default/objects/Registration__c/fields/Event_Year__c.field-meta.xml
<CustomField>
    <fullName>Event_Year__c</fullName>
    <formula>TEXT(YEAR(Event__r.Event_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Year</label>
    <type>Text</type>
</CustomField>