force-app/main/default/objects/Registration__c/fields/eventuserid__c.field-meta.xml
<CustomField>
    <fullName>eventuserid__c</fullName>
    <description
  >The ON24-generated unique identified for a particular registrant. Anyone who registers successfully gets a new eventuserid. A user who registers typically gets an event cookie that prevents him from re-registering from the same machine, avoiding duplicates.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >The ON24-generated unique identified for a particular registrant. Anyone who registers successfully gets a new eventuserid. A user who registers typically gets an event cookie that prevents him from re-registering from the same machine, avoiding duplicate</inlineHelpText>
    <label>On24 eventuserid</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>