force-app/main/default/objects/Registration__c/fields/Exclude_From_All__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Exclude registrant&apos;s data from event lead reports. (will only show title and org)</description>
    <inlineHelpText
  >Exclude registrant&apos;s data from event lead reports. (will only show title and org)</inlineHelpText>
    <label>Exclude From All</label>
    <type>Checkbox</type>
</CustomField>