force-app/main/default/objects/Registration__c/fields/Exclude_From_Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Mailing_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Excludes registrant from the mailing list for this event.</description>
    <inlineHelpText
  >Check here to exclude this registrant from the mailing list for this event only.</inlineHelpText>
    <label>Exclude From Mailing List?</label>
    <type>Checkbox</type>
</CustomField>