force-app/main/default/objects/Registration__c/fields/Finance_Batch__c.field-meta.xml
<CustomField>
    <fullName>Finance_Batch__c</fullName>
    <label>Finance Batch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>