force-app/main/default/objects/Registration__c/fields/firstarchiveactivity__c.field-meta.xml
<CustomField>
    <fullName>firstarchiveactivity__c</fullName>
    <description
  >The date/time this attendee first opened the event console during the archived event.  e.g., Mon, 30 Mar 2009 12:27 PDT</description>
    <inlineHelpText
  >The date/time this attendee first opened the event console during the archived event.  e.g., Mon, 30 Mar 2009 12:27 PDT</inlineHelpText>
    <label>On24 firstarchiveactivity</label>
    <type>DateTime</type>
</CustomField>