force-app/main/default/objects/Registration__c/fields/firstliveactivity__c.field-meta.xml
<CustomField>
    <fullName>firstliveactivity__c</fullName>
    <description
  >The date/time this attendee first opened the event console during this live event. e.g., Mon, 30 Mar 2009 12:27 PDT</description>
    <inlineHelpText
  >The date/time this attendee first opened the event console during this live event. e.g., Mon, 30 Mar 2009 12:27 PDT</inlineHelpText>
    <label>On24 firstliveactivity</label>
    <type>DateTime</type>
</CustomField>