force-app/main/default/objects/Registration__c/fields/Gift_Card_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Card Recipient</label>
    <type>Checkbox</type>
</CustomField>