force-app/main/default/objects/Registration__c/fields/GSC__c.field-meta.xml
<CustomField>
    <fullName>GSC__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >is a &quot;Government Solution Center&quot; registrant</description>
    <inlineHelpText
  >is a &quot;Government Solution Center&quot; registrant</inlineHelpText>
    <label>GSC</label>
    <type>Checkbox</type>
</CustomField>