force-app/main/default/objects/Registration__c/fields/Honorific__c.field-meta.xml
<CustomField>
    <fullName>Honorific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honorific</label>
    <type>Checkbox</type>
</CustomField>