force-app/main/default/objects/Registration__c/fields/How_Heard__c.field-meta.xml
<CustomField>
    <fullName>How_Heard__c</fullName>
    <label>How did you hear about this event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Postcard</fullName>
            </value>
            <value>
                <fullName>B Brochure</fullName>
            </value>
            <value>
                <fullName>C Email</fullName>
            </value>
            <value>
                <fullName>D Phone Call</fullName>
            </value>
            <value>
                <fullName>E Event Web Page</fullName>
            </value>
            <value>
                <fullName>F Memo From Management</fullName>
            </value>
            <value>
                <fullName>G Staff Meeting</fullName>
            </value>
            <value>
                <fullName>H User Group</fullName>
            </value>
            <value>
                <fullName>I Training Office</fullName>
            </value>
            <value>
                <fullName>Z Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>