force-app/main/default/objects/Registration__c/fields/How_Heard_Other__c.field-meta.xml
<CustomField>
    <fullName>How_Heard_Other__c</fullName>
    <label>How Heard Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>