force-app/main/default/objects/Registration__c/fields/HubSpot_Needs_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Needs_to_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HubSpot Needs to Sync</label>
    <type>Checkbox</type>
</CustomField>