force-app/main/default/objects/Registration__c/fields/Industry_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Industry_Job_Function__c</fullName>
    <description>The registrant&apos;s Industry Job Function.</description>
    <formula
  >IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Communications/Public Relations&quot; ), &quot; Communications/Public Relations; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Consultant&quot; ), &quot; Consultant; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Executive&quot; ), &quot; Executive; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Finance&quot; ), &quot;Finance; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Government Affairs/Relations&quot; ), &quot;Government Affairs/Relations; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Human Resources&quot; ), &quot;Human Resources; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Information Technology&quot; ), &quot;Information Technology; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Legal&quot; ), &quot;Legal; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Marketing&quot; ), &quot;Marketing; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Operations&quot; ), &quot;Operations; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Other&quot; ), &quot;Other; &quot;,null ) &amp;
IF ( INCLUDES ( Registrant_Name__r.Industry_Job_Function__c, &quot;Sales&quot; ), &quot;Sales; &quot;,null )</formula>
    <label>Industry Job Function</label>
    <type>Text</type>
</CustomField>