force-app/main/default/objects/Registration__c/fields/Industry_Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Industry_Job_Level__c</fullName>
    <description>The registrant&apos;s Industry Job Level.</description>
    <formula>TEXT(Registrant_Name__r.Industry_Job_Level__c)</formula>
    <label>Industry Job Level</label>
    <type>Text</type>
</CustomField>