force-app/main/default/objects/Registration__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description
  >Shows the Invoice Date from the Reg Billing Contract related to this registration.</description>
    <formula>Contract__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the Invoice Date from the Reg Billing Contract related to this registration.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>