force-app/main/default/objects/Registration__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description
  >Shows Invoice Number from the Reg Billing Contract related to this registration.</description>
    <formula>Contract__r.Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows Invoice Number from the Reg Billing Contract related to this registration.</inlineHelpText>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>