force-app/main/default/objects/Registration__c/fields/ipaddress__c.field-meta.xml
<CustomField>
    <fullName>ipaddress__c</fullName>
    <label>On24 ipaddress</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>