force-app/main/default/objects/Registration__c/fields/liveviewed__c.field-meta.xml
<CustomField>
    <fullName>liveviewed__c</fullName>
    <description
  >The number of times the attendee launched the event console during the live event.</description>
    <inlineHelpText
  >The number of times the attendee launched the event console during the live event.</inlineHelpText>
    <label>liveviewed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>