force-app/main/default/objects/Registration__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <description>Hidden - pulls in Mailing City for reporting</description>
    <formula>Registrant_Name__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Hidden - pulls in Mailing City for reporting</inlineHelpText>
    <label>Mailing City</label>
    <type>Text</type>
</CustomField>