force-app/main/default/objects/Registration__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <description>hidden - pulls in mailing state for reporting</description>
    <formula>Registrant_Name__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >hidden - pulls in mailing state for reporting</inlineHelpText>
    <label>Mailing State</label>
    <type>Text</type>
</CustomField>