force-app/main/default/objects/Registration__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <description>Hidden - pulls in Mailing Street for reporting.</description>
    <formula>Registrant_Name__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Hidden - pulls in Mailing Street for reporting.</inlineHelpText>
    <label>Mailing Street</label>
    <type>Text</type>
</CustomField>