force-app/main/default/objects/Registration__c/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <description>hidden - pulls in mailing zip for reporting</description>
    <formula>Registrant_Name__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>hidden - pulls in mailing zip for reporting</inlineHelpText>
    <label>Mailing Zip</label>
    <type>Text</type>
</CustomField>