force-app/main/default/objects/Registration__c/fields/Minutes_Viewed_Live__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Viewed_Live__c</fullName>
    <description
  >Shows the number of minutes the registrant viewed the live presentation for this webinar.</description>
    <inlineHelpText
  >Shows the number of minutes the registrant viewed the live presentation for this webinar.</inlineHelpText>
    <label>Minutes Viewed (Live)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>