force-app/main/default/objects/Registration__c/fields/Minutes_Viewed_On_Demand__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Viewed_On_Demand__c</fullName>
    <description
  >Shows the number of minutes the registrant viewed the On-Demand version of the webinar.</description>
    <inlineHelpText
  >Shows the number of minutes the registrant viewed the On-Demand version of the webinar.</inlineHelpText>
    <label>Minutes Viewed (On-Demand)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>