force-app/main/default/objects/Registration__c/fields/Non_Qual__c.field-meta.xml
<CustomField>
    <fullName>Non_Qual__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field indicates that a registration is not qualified to count as a lead for this event or webinar campaign. Examples include staff, students, test records, or people that are not meeting filter requirements.</description>
    <inlineHelpText
  >This field indicates that a registration is not qualified to count as a lead for this event or webinar campaign. Examples include staff, students, test records, or people that are not meeting filter requirements.</inlineHelpText>
    <label>Non-Qual</label>
    <type>Checkbox</type>
</CustomField>