force-app/main/default/objects/Registration__c/fields/Non_Qual_or_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Non_Qual_or_Sponsor__c</fullName>
    <description
  >This field returns a true value if a registrant either has a Non-Qual value of true or has a Promo Code that contains &quot;sponsor&quot;.</description>
    <formula>Non_Qual__c = TRUE
||
CONTAINS( LOWER(Promo_Code__c) , &quot;sponsor&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This field returns a true value if a registrant either has a Non-Qual value of true or has a Promo Code that contains &quot;sponsor&quot;.</inlineHelpText>
    <label>Non-Qual or Sponsor</label>
    <type>Checkbox</type>
</CustomField>