force-app/main/default/objects/Registration__c/fields/On24_Engaged__c.field-meta.xml
<CustomField>
    <fullName>On24_Engaged__c</fullName>
    <formula>IF(answeredanypoll__c=&quot;Y&quot;, 1, 
IF(askedanyquestion__c=&quot;Y&quot;, 1,
IF(answeredanysurvey__c=&quot;Y&quot;, 1,
0
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On24 Engaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>