force-app/main/default/objects/Registration__c/fields/On24_eventid__c.field-meta.xml
<CustomField>
    <fullName>On24_eventid__c</fullName>
    <description
  >Looks up the On24 Event Id from the Event Record for integration with On24 XML feed.</description>
    <formula>Event__r.On24_Event_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Looks up the On24 Event Id from the Event Record for integration with On24 XML feed.</inlineHelpText>
    <label>On24 eventid</label>
    <type>Text</type>
</CustomField>