force-app/main/default/objects/Registration__c/fields/On24_survey1answer_255__c.field-meta.xml
<CustomField>
    <fullName>On24_survey1answer_255__c</fullName>
    <description
  >Shows the first 255 characters of  On24 survey1answer for reporting purposes.</description>
    <inlineHelpText
  >Shows the first 255 characters of  On24 survey1answer for reporting purposes.</inlineHelpText>
    <label>On24 survey1answer (255)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>