force-app/main/default/objects/Registration__c/fields/On24_Survey1answer_numeric__c.field-meta.xml
<CustomField>
    <fullName>On24_Survey1answer_numeric__c</fullName>
    <description>Used to calculate Average Survey Rating.</description>
    <formula>VALUE( On24_survey1answer_255__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to calculate Average Survey Rating.</inlineHelpText>
    <label>On24 Survey1answer (numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>