force-app/main/default/objects/Registration__c/fields/OneForm_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>OneForm_Transaction_ID__c</fullName>
    <description
  >This is the transaction id from the transaction in OneForm that generated this record.</description>
    <inlineHelpText
  >This is the transaction id from the transaction in OneForm that generated this record.</inlineHelpText>
    <label>OneForm Transaction ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>