force-app/main/default/objects/Registration__c/fields/Org_matches_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Org_matches_Sponsor__c</fullName>
    <formula>Reg_Company_Name__c =  Sponsor_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org matches Sponsor</label>
    <type>Checkbox</type>
</CustomField>