force-app/main/default/objects/Registration__c/fields/os__c.field-meta.xml
<CustomField>
    <fullName>os__c</fullName>
    <label>On24 os</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>