force-app/main/default/objects/Registration__c/fields/Partner_Ref__c.field-meta.xml
<CustomField>
    <fullName>Partner_Ref__c</fullName>
    <description>Indicates what URL the registration came in from.</description>
    <inlineHelpText
  >Indicates what URL the registration came in from.</inlineHelpText>
    <label>Partner Ref</label>
    <length>30</length>
    <type>Text</type>
</CustomField>