force-app/main/default/objects/Registration__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description
  >Shows either the invoice number or the authorize.net transaction number for each registration.</description>
    <formula>IF(ISBLANK(Contract__c)=FALSE, Invoice_Number__c,
IF(ISBLANK( Transaction_ID__c )=FALSE, TEXT( Transaction_ID__c ) ,
&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows either the invoice number or the authorize.net transaction number for each registration.</inlineHelpText>
    <label>Payment Reference</label>
    <type>Text</type>
</CustomField>