force-app/main/default/objects/Registration__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description
  >This is the form of payment used in the registration.</description>
    <inlineHelpText
  >This is the form of payment used in the registration.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Bill Me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>