force-app/main/default/objects/Registration__c/fields/Personal_or_Free_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Personal_or_Free_Email_Domain__c</fullName>
    <formula>Registrant_Name__r.Personal_or_Free_Email_Domain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal or Free Email Domain</label>
    <type>Checkbox</type>
</CustomField>