force-app/main/default/objects/Registration__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description
  >PO Number to reference for billing of registration fees.</description>
    <label>PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>