force-app/main/default/objects/Registration__c/fields/poll1question__c.field-meta.xml
<CustomField>
    <fullName>poll1question__c</fullName>
    <description
  >Client-determined poll question asked to the audience.</description>
    <inlineHelpText
  >Client-determined poll question asked to the audience.</inlineHelpText>
    <label>On24 poll1question</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>