force-app/main/default/objects/Registration__c/fields/Privacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Status__c</fullName>
    <description>The registrant&apos;s Privacy Status.</description>
    <formula>TEXT(Registrant_Name__r.Privacy_Status__c)</formula>
    <label>Privacy Status</label>
    <type>Text</type>
</CustomField>