force-app/main/default/objects/Registration__c/fields/Privacy_Status_Evaluation_Period__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Status_Evaluation_Period__c</fullName>
    <description
  >If the Reg Date is greater than the Privacy Status Date OR if the Reg Date falls within the last 365 days of the Privacy Status Date.</description>
    <formula>OR(
  Reg_Date__c &gt; Registrant_Name__r.Privacy_Status_Date__c,
  AND(
    0 &lt;= (Registrant_Name__r.Privacy_Status_Date__c - Reg_Date__c),
    (Registrant_Name__r.Privacy_Status_Date__c - Reg_Date__c) &lt;= 365
  )
)</formula>
    <inlineHelpText
  >If the Reg Date is greater than the Privacy Status Date OR if the Reg Date falls within the last 365 days of the Privacy Status Date.</inlineHelpText>
    <label>Privacy Status Evaluation Period</label>
    <type>Checkbox</type>
</CustomField>