force-app/main/default/objects/Registration__c/fields/Qualified_On_Demand_Activity__c.field-meta.xml
<CustomField>
    <fullName>Qualified_On_Demand_Activity__c</fullName>
    <description
  >Indicates that this Registrant is qualified, and viewed or registered for the On-Demand presentation.  Note: Registrant may have also viewed the live presentation.</description>
    <formula>Non_Qual__c = FALSE &amp;&amp;
(
attendedarchive__c = &quot;Y&quot; ||
CreatedDate &gt;  Event__r.liveend__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Indicates that this Registrant is qualified, and viewed or registered for the On-Demand presentation.  Note: Registrant may have also viewed the live presentation.</inlineHelpText>
    <label>On24 Qualified On-Demand Activity</label>
    <type>Checkbox</type>
</CustomField>