force-app/main/default/objects/Registration__c/fields/Questions_or_Comments__c.field-meta.xml
<CustomField>
    <fullName>Questions_or_Comments__c</fullName>
    <label>Additional Questions or Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>