force-app/main/default/objects/Registration__c/fields/Reg_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Reg_Account_Name__c</fullName>
    <formula>Registrant_Name__r.Account_Name_Lookup_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Account Name</label>
    <type>Text</type>
</CustomField>