force-app/main/default/objects/Registration__c/fields/Reg_Advisory_Board__c.field-meta.xml
<CustomField>
    <fullName>Reg_Advisory_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory Board</label>
    <type>Checkbox</type>
</CustomField>