force-app/main/default/objects/Registration__c/fields/Reg_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Reg_Amount_Due__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total dollar amount due on the registration</description>
    <label>Reg Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>