force-app/main/default/objects/Registration__c/fields/Reg_Billing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_Address_2__c</fullName>
    <label>Reg Billing Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>