force-app/main/default/objects/Registration__c/fields/Reg_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_City__c</fullName>
    <label>Reg Billing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>