force-app/main/default/objects/Registration__c/fields/Reg_Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_Company_Name__c</fullName>
    <label>Reg Billing Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>